@@ -1,3 +1,7 @@
+2007-03-01  Albert Chu  <chu11@llnl.gov>
+
+	* cerebro.spec.in: Fix default permissions issue.
+	
 2007-02-09  Albert Chu  <chu11@llnl.gov>
 
 	* src/libs/modules/metric_module.c (_metric_module_cb),
